--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "identity-obj-proxy": "^3.0.0",
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
+    "node-sass": "^4.9.0",
     "preact-cli": "^2.1.0",
-    "preact-render-spy": "^1.2.1"
+    "preact-render-spy": "^1.2.1",
+    "sass-loader": "^7.0.1"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7"
